haven-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haven-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: haven
  template:
    metadata:
      name: haven
      labels:
        app: haven
    spec:
      containers:
        - name: haven-container
          image: ghcr.io/havenweb/haven:90a3b93
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: haven-storage
              mountPath: /storage
      volumes:
        - name: haven-storage
          persistentVolumeClaim:
            claimName: haven-pvc
