haven-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haven
  labels:
    app: haven
spec:
  ports:
  - port: 3000
  selector:
    app: haven
